stakater/mattermost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mattermost-operator
  labels:
    stakater.com/tenant: gabbar
spec: {}
status: {}
