stakater/mattermost/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stakater
  namespace: mattermost-operator
spec:
  host: stakater-mattermost-operator.apps.devtest.vxdqgl7u.kubeapp.cloud
  to:
    kind: Service
    name: stakater-mattermost
    weight: 100
  port:
    targetPort: app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
